fix wrong height in Firefox, fixes #1103

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -332,7 +332,6 @@ select.sidebar-selectlist {
                     color: transparent;
                     cursor: pointer;
                     font: 0/0 a;
-                    height: 30px;
                     text-shadow: none;
                 }
 
